feat: refactor js

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
         </div>
     </div>
     <script src="node_modules/ical.js/build/ical.js"></script>
-    <script src="javascripts/app.js"></script>
+    <!--<script src="javascripts/app.js"></script>-->
+    <script src="javascripts/domElements.js" type="module"></script>
+    <script src="javascripts/eventListeners.js" type="module"></script>
+    <script src="javascripts/functions.js" type="module"></script>
+    <script src="javascripts/utils.js" type="module"></script>
+    <script src="javascripts/init.js" type="module"></script>
 </body>
 </html>
