feat: change color btn

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     </div>
                 </div>
             </div>
+            <div class="changeColor">
+                <button class="hajarBtn btn">HAJAR COLOR</button>
+            </div>
         </div>
     </div>
     <div class="display">
