feat: update dropdown content

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                             <p>L3</p>
                             <li class="group" id="CILS">L3 - CILS</li>
                             <li class="group" id="ASR">L3 - ASR</li>
-                            <li class="group" id="MIAGE">L3 - MIAGE I</li>
-                            <li class="group" id="l3miaa">L3 - MIAGE A</li>
-                            <p>L2</p>
+                            <li class="group" id="MIAGE_I">L3 - MIAGE I</li>
+                            <li class="group" id="MIAGE_A">L3 - MIAGE A</li>
+                            <!--<p>L2</p>
                             <li class="group" id="l2infog1">L2 - G1</li>
                             <li class="group" id="l2infog2">L2 - G2</li>
                             <li class="group" id="l2infog3">L2 - G3</li>
@@ -33,7 +33,7 @@
                             <li class="group" id="l1portailmi_g2">L1 - G2</li>
                             <li class="group" id="l1portailmi_g3">L1 - G3</li>
                             <li class="group" id="l1portailmi_g4">L1 - G4</li>
-                            <li class="group" id="l1portailmi_g5">L1 - G5</li>
+                            <li class="group" id="l1portailmi_g5">L1 - G5</li>-->
                         </ul>
                     </div>
                 </div>
