--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="changeColor">
-                <button class="hajarBtn btn">HAJAR COLOR</button>
+                <button class="colorBtn btn">HAJAR COLOR</button>
             </div>
         </div>
     </div>
